# rustinpy

./: Cargo.toml  README.md  pyproject.toml
python_src/: main.py
scripts/: speed_test.py
src/: lib.rs
src_python/rustinpy/: __init__.py
